Add measurements readme based on division.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -27,6 +27,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A live version of this Jupyter Notebook can be viewed [here](https://nbviewer.jupyter.org/urls/dl.dropbox.com/s/1xlv5oacgobrfd4/mlpef-inference-v0.5-dividiti.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Table of Contents"
    ]
   },
@@ -874,13 +881,23 @@
    "source": [
     "implementation_readmes = {}\n",
     "implementation_readmes['image-classification-tflite'] = \\\n",
-    "\"\"\"# MLPerf Inference - Image Clasification - TFLite\n",
+    "\"\"\"# MLPerf Inference - Image Classification - TFLite\n",
+    "\n",
+    "This C++ implementation uses TFLite to run TFLite models for Image Classification on CPUs.\n",
+    "\n",
+    "## Links\n",
+    "- [Jupyter notebook](https://nbviewer.jupyter.org/urls/dl.dropbox.com/s/1xlv5oacgobrfd4/mlpef-inference-v0.5-dividiti.ipynb)\n",
     "- [Source code](https://github.com/ctuning/ck-mlperf/tree/master/program/image-classification-tflite-loadgen).\n",
     "- [Instructions](https://github.com/mlperf/inference/blob/master/v0.5/classification_and_detection/optional_harness_ck/classification/tflite/README.md).\n",
     "\"\"\"\n",
     "\n",
     "implementation_readmes['image-classification-armnn-tflite'] = \\\n",
-    "\"\"\"# MLPerf Inference - Image Clasification - ArmNN-TFLite\n",
+    "\"\"\"# MLPerf Inference - Image Classification - ArmNN-TFLite\n",
+    "\n",
+    "This C++ implementation uses ArmNN with the TFLite frontend to run TFLite models for Image Classification on Arm Cortex CPUs and Arm Mali GPUs.\n",
+    "\n",
+    "## Links\n",
+    "- [Jupyter notebook](https://nbviewer.jupyter.org/urls/dl.dropbox.com/s/1xlv5oacgobrfd4/mlpef-inference-v0.5-dividiti.ipynb)\n",
     "- [Source code](https://github.com/ctuning/ck-mlperf/tree/master/program/image-classification-armnn-tflite-loadgen).\n",
     "- [Instructions](https://github.com/ARM-software/armnn-mlperf/blob/master/README.md).\n",
     "\"\"\""
@@ -900,6 +917,28 @@
     "        print('Error: %s' % r['error'])\n",
     "        exit(1)\n",
     "    implementation_paths[implementation] = r['path']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "measurements_readmes = {}\n",
+    "for division_upper in [ 'Closed', 'Open' ]:\n",
+    "    division_lower = division_upper.lower()\n",
+    "    measurements_readmes[division_lower] = '''# MLPerf Inference - {} Division - Image Classification\n",
+    "\n",
+    "We performed our measurements using automated, customizable, portable and reproducible\n",
+    "[Collective Knowledge](http://cknowledge.org) workflows. Our workflows automatically\n",
+    "install dependencies (models, datasets, etc.), preprocess input data in the correct way,\n",
+    "and so on.\n",
+    "\n",
+    "## Links\n",
+    "- [Bash script](https://github.com/ctuning/ck-mlperf/tree/master/script/mlperf-inference-v0.5.{}.image-classification)\n",
+    "used to invoke benchmarking on Linux systems or Android devices.\n",
+    "'''.format(division_upper, division_lower)"
    ]
   },
   {
@@ -1329,12 +1368,11 @@
     "        implementation_dir = os.path.join(benchmark_dir, implementation)\n",
     "        if not os.path.exists(implementation_dir): os.mkdir(implementation_dir)\n",
     "        print('%s' % code_dir)\n",
+    "\n",
     "        # Create 'README.md'.\n",
     "        implementation_readme_name = 'README.md'\n",
     "        implementation_readme_path = os.path.join(implementation_dir, implementation_readme_name)\n",
     "        implementation_readme = implementation_readmes.get(implementation, '')\n",
-    "#         pprint(implementation)\n",
-    "#         pprint(implementation_readmes)\n",
     "        with open(implementation_readme_path, 'w') as implementation_readme_file:\n",
     "            implementation_readme_file.writelines(implementation_readme)\n",
     "        if implementation_readme == '':\n",
@@ -1364,35 +1402,39 @@
     "        scenario_dir = os.path.join(benchmark_dir, scenario)\n",
     "        if not os.path.exists(scenario_dir): os.mkdir(scenario_dir)\n",
     "        print(scenario_dir)\n",
+    "        \n",
     "        # Create '<system_desc_id>_<implementation_id>.json'.\n",
     "        system_implementation_json_name = system+'_'+implementation+'.json'\n",
     "        system_implementation_json_path = os.path.join(scenario_dir, system_implementation_json_name)\n",
     "        with open(system_implementation_json_path, 'w') as system_implementation_json_file:\n",
-    "#             pprint(implementation_benchmark)\n",
-    "#             pprint(implementation_benchmarks)\n",
     "            implementation_benchmark_json = implementation_benchmarks.get(implementation_benchmark, default_implementation_benchmark_json)\n",
-    "            json.dump(implementation_benchmark_json, system_implementation_json_file, indent=2)\n",
-    "            if implementation_benchmark_json == default_implementation_benchmark_json:\n",
-    "                print('  |_ %s [DEFAULT]' % system_implementation_json_name)\n",
-    "                raise\n",
+    "            if implementation_benchmark_json != default_implementation_benchmark_json:\n",
+    "                print('  |_ %s [for %s]' % (system_implementation_json_name, implementation_benchmark))\n",
+    "                json.dump(implementation_benchmark_json, system_implementation_json_file, indent=2)\n",
     "            else:\n",
-    "                print('  |_ %s [%s]' % (system_implementation_json_name, implementation_benchmark))\n",
-    "        # Create empty 'README.md'.\n",
-    "        system_implementation_readme_name = 'README.md'\n",
-    "        system_implementation_readme_path = os.path.join(scenario_dir, system_implementation_readme_name)\n",
-    "        with open(system_implementation_readme_path, 'a'):\n",
-    "            os.utime(system_implementation_readme_path, None)\n",
-    "            print('  |_ %s [EMPTY]' % system_implementation_readme_name)\n",
+    "                print('  |_ %s [DEFAULT]' % system_implementation_json_name)\n",
+    "                raise \"Default implementation!\"\n",
     "        \n",
-    "        # Copy 'user.conf' from the implementation source.\n",
+    "        # Create 'README.md' based on the division (basically, mentions a division-specific script).\n",
+    "        measurements_readme_name = 'README.md'\n",
+    "        measurements_readme_path = os.path.join(scenario_dir, measurements_readme_name)\n",
+    "        measurements_readme = measurements_readmes.get(division, '')\n",
+    "        if measurements_readme != '':\n",
+    "            with open(measurements_readme_path, 'w') as measurements_readme_file:\n",
+    "                measurements_readme_file.writelines(measurements_readme)\n",
+    "            print('  |_ %s [for %s division]' % (measurements_readme_name, division))\n",
+    "        else:\n",
+    "            raise \"Invalid measurements readme!\"\n",
+    "        \n",
+    "        # Copy 'user.conf' from implementation source.\n",
     "        user_conf_name = 'user.conf'\n",
     "        implementation_path = implementation_paths.get(implementation, '')\n",
-    "        if implementation_path == '':\n",
-    "            raise \"Invalid implementation path!\"\n",
-    "        else:\n",
+    "        if implementation_path != '':\n",
     "            user_conf_path = os.path.join(implementation_path, user_conf_name)\n",
     "            copy2(user_conf_path, scenario_dir)\n",
     "            print('  |_ %s [from %s]' % (user_conf_name, user_conf_path))\n",
+    "        else:\n",
+    "            raise \"Invalid implementation path!\"\n",
     "        \n",
     "        # Copy 'mlperf.conf' from MLPerf Inference source.\n",
     "        mlperf_conf_name = 'mlperf.conf'\n",
