Fix armnn updates to tflite structures.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -324,7 +324,7 @@
    "outputs": [],
    "source": [
     "closed_firefly_armnn = deepcopy(firefly)\n",
-    "closed_firefly_tflite.update({\n",
+    "closed_firefly_armnn.update({\n",
     "    \"division\"  : \"closed\",\n",
     "    \"framework\" : \"ArmNN v19.08\"\n",
     "})\n",
@@ -338,7 +338,7 @@
    "outputs": [],
    "source": [
     "open_firefly_armnn = deepcopy(firefly)\n",
-    "open_firefly_tflite.update({\n",
+    "open_firefly_armnn.update({\n",
     "    \"division\"  : \"open\",\n",
     "    \"framework\" : \"ArmNN v19.08\"\n",
     "})\n",
@@ -447,7 +447,7 @@
    "outputs": [],
    "source": [
     "closed_hikey960_armnn = deepcopy(hikey960)\n",
-    "closed_hikey960_tflite.update({\n",
+    "closed_hikey960_armnn.update({\n",
     "    \"division\"  : \"closed\",\n",
     "    \"framework\" : \"ArmNN v19.08\"\n",
     "})\n",
@@ -461,7 +461,7 @@
    "outputs": [],
    "source": [
     "open_hikey960_armnn = deepcopy(hikey960)\n",
-    "open_hikey960_tflite.update({\n",
+    "open_hikey960_armnn.update({\n",
     "    \"division\"  : \"open\",\n",
     "    \"framework\" : \"ArmNN v19.08\"\n",
     "})\n",
@@ -1543,7 +1543,7 @@
     "    return dfs\n",
     "\n",
     "repo_uoa = 'mlperf.closed.image-classification.firefly.tflite-v1.15'\n",
-    "dfs = get_experimental_results(repo_uoa)"
+    "dfs = get_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
    ]
   }
  ],
