Several PRs submitted.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1093,7 +1093,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**: missing performance experiments with TFLite v1.15; no experiments with ArmNN v19.08 with Neon."
+    "```\n",
+    "$ wget https://www.dropbox.com/s/ig97x9cqoxfs3ne/mlperf.closed.image-classification.rpi4.tflite-v1.15.zip\n",
+    "$ ck add repo --zip=mlperf.closed.image-classification.rpi4.tflite-v1.15.zip\n",
+    "```\n",
+    "\n",
+    "**TODO**: experiments with ArmNN v19.08 with Neon launched at 22:53."
    ]
   },
   {
@@ -1189,7 +1194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO:** experiments with TFLite are in progress."
+    "**TODO**"
    ]
   },
   {
@@ -1211,13 +1216,15 @@
     "    # Image Classification - Closed (MobileNet, ResNet).\n",
     "    #\n",
     "    # firefly\n",
-    "    'mlperf.closed.image-classification.firefly.tflite-v1.15',\n",
-    "    'mlperf.closed.image-classification.firefly.armnn-v19.08.neon',\n",
-    "    'mlperf.closed.image-classification.firefly.armnn-v19.08.opencl',\n",
+    "    'mlperf.closed.image-classification.firefly.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/18\n",
+    "    'mlperf.closed.image-classification.firefly.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/21\n",
+    "    'mlperf.closed.image-classification.firefly.armnn-v19.08.opencl', #https://github.com/mlperf/submissions_inference_0_5/pull/22\n",
     "    # hikey960\n",
-    "    'mlperf.closed.image-classification.hikey960.tflite-v1.15',\n",
-    "    'mlperf.closed.image-classification.hikey960.armnn-v19.08.neon',\n",
-    "    'mlperf.closed.image-classification.hikey960.armnn-v19.08.opencl',\n",
+    "    'mlperf.closed.image-classification.hikey960.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/23\n",
+    "    'mlperf.closed.image-classification.hikey960.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/24\n",
+    "    'mlperf.closed.image-classification.hikey960.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/25\n",
+    "    # rpi4\n",
+    "    'mlperf.closed.image-classification.rpi4.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/26/\n",
     "    # mate10pro\n",
     "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon', # BAD LOADGEN\n",
     "    'mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet', # BAD LOADGEN\n",
@@ -1542,7 +1549,7 @@
     "    \n",
     "    return dfs\n",
     "\n",
-    "repo_uoa = 'mlperf.closed.image-classification.firefly.tflite-v1.15'\n",
+    "repo_uoa = 'mlperf.closed.image-classification.rpi4.tflite-v1.15'\n",
     "dfs = get_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
    ]
   }
