--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1096,16 +1096,17 @@
     "```\n",
     "$ wget https://www.dropbox.com/s/ig97x9cqoxfs3ne/mlperf.closed.image-classification.rpi4.tflite-v1.15.zip\n",
     "$ ck add repo --zip=mlperf.closed.image-classification.rpi4.tflite-v1.15.zip\n",
-    "```\n",
     "\n",
-    "**TODO**: experiments with ArmNN v19.08 with Neon launched at 22:53."
+    "$ wget https://www.dropbox.com/s/ohcuyes409h66tx/mlperf.closed.image-classification.rpi4.armnn-v19.08.neon.zip\n",
+    "$ ck add repo --zip=mlperf.closed.image-classification.rpi4.armnn-v19.08.neon.zip\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `mate10pro` (**BAD LOADGEN**)"
+    "#### `mate10pro`"
    ]
   },
   {
@@ -1113,9 +1114,6 @@
    "metadata": {},
    "source": [
     "```\n",
-    "$ wget https://www.dropbox.com/s/nts8e7unb7vm68f/mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.zip\n",
-    "$ ck add repo --zip=mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.zip\n",
-    "\n",
     "$ wget https://www.dropbox.com/s/t2o2elqdyitqlpi/mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon.zip\n",
     "$ ck add repo --zip=mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon.zip\n",
     "```"
@@ -1125,7 +1123,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO:** accuracy experiment with TFLite v1.15 for ResNet aborted (estimated 17 hours); no OpenCL experiments with ArmNN."
+    "**TODO:** accuracy experiment with TFLite v1.15 for ResNet aborted (estimated 17 hours); experiments with ArmNN with OpenCL are in progress."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### `mate10pro` (\"BAD LOADGEN\" - only for testing the checker)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "$ wget https://www.dropbox.com/s/nts8e7unb7vm68f/mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.BAD_LOADGEN.zip\n",
+    "$ ck add repo --zip=mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.BAD_LOADGEN.zip\n",
+    "```"
    ]
   },
   {
@@ -1149,6 +1164,9 @@
     "```\n",
     "$ wget https://www.dropbox.com/s/q8ieqgnr3zn6w4y/mlperf.open.image-classification.firefly.tflite-v1.15.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.firefly.tflite-v1.15.zip\n",
+    "\n",
+    "$ wget https://www.dropbox.com/s/3mmefvxc15m9o5b/mlperf.open.image-classification.firefly.armnn-v19.08.opencl.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.firefly.armnn-v19.08.opencl.zip\n",
     "```"
    ]
   },
@@ -1156,7 +1174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO:** experiments with ArmNN  w/ OpenCL are in progress."
+    "**TODO:** experiments with ArmNN  w/ Neon have started (11am 11/Oct)."
    ]
   },
   {
@@ -1173,6 +1191,9 @@
     "```\n",
     "$ wget https://www.dropbox.com/s/2gbbpsd2pjurvc8/mlperf.open.image-classification.hikey960.tflite-v1.15.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.hikey960.tflite-v1.15.zip\n",
+    "\n",
+    "$ wget https://www.dropbox.com/s/m5illg8i2tse5hg/mlperf.open.image-classification.hikey960.armnn-v19.08.opencl.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.hikey960.armnn-v19.08.opencl.zip\n",
     "```"
    ]
   },
@@ -1180,7 +1201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO:** experiments with ArmNN  w/ OpenCL are in progress."
+    "**TODO:** experiments with ArmNN  w/ Neon have started (11am 11/Oct)."
    ]
   },
   {
@@ -1211,10 +1232,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repos = [\n",
-    "    #\n",
-    "    # Image Classification - Closed (MobileNet, ResNet).\n",
-    "    #\n",
+    "#\n",
+    "# Image Classification - Closed (MobileNet, ResNet).\n",
+    "#\n",
+    "repos_image_classification_closed = [\n",
     "    # firefly\n",
     "    'mlperf.closed.image-classification.firefly.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/18\n",
     "    'mlperf.closed.image-classification.firefly.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/21\n",
@@ -1225,17 +1246,28 @@
     "    'mlperf.closed.image-classification.hikey960.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/25\n",
     "    # rpi4\n",
     "    'mlperf.closed.image-classification.rpi4.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/26/\n",
+    "    'mlperf.closed.image-classification.rpi4.armnn-v19.08.neon',\n",
     "    # mate10pro\n",
-    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon', # BAD LOADGEN\n",
-    "    'mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet', # BAD LOADGEN\n",
-    "    #\n",
-    "    # Image Classification - Open (MobileNets-v1,v2).\n",
-    "    #\n",
+    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon',\n",
+    "    # mate10pro - for testing the checker\n",
+    "    'mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.BAD_LOADGEN', \n",
+    "]\n",
+    "\n",
+    "#\n",
+    "# Image Classification - Open (MobileNets-v1,v2).\n",
+    "#\n",
+    "repos_image_classification_open = [\n",
     "    # firefly\n",
     "    'mlperf.open.image-classification.firefly.tflite-v1.15',\n",
+    "    'mlperf.open.image-classification.firefly.armnn-v19.08.opencl',\n",
     "    # hikey960\n",
     "    'mlperf.open.image-classification.hikey960.tflite-v1.15',\n",
-    "]"
+    "    'mlperf.open.image-classification.hikey960.armnn-v19.08.opencl',\n",
+    "    # rpi4\n",
+    "    #'mlperf.open.image-classification.rpi4.tflite-v1.15',\n",
+    "]\n",
+    "\n",
+    "repos = repos_image_classification_closed + repos_image_classification_open"
    ]
   },
   {
@@ -1244,7 +1276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ck recache repo\n",
+    "#!ck recache repo\n",
     "for repo_uoa in repos:\n",
     "    print(\"=\" * 100)\n",
     "    print(repo_uoa)\n",
@@ -1549,8 +1581,8 @@
     "    \n",
     "    return dfs\n",
     "\n",
-    "repo_uoa = 'mlperf.closed.image-classification.rpi4.tflite-v1.15'\n",
-    "dfs = get_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
+    "# repo_uoa = 'mlperf.closed.image-classification.rpi4.tflite-v1.15'\n",
+    "# dfs = get_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
    ]
   }
  ],
