Generate division_systems dict. Add backends to ArmNN systems.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -43,11 +43,18 @@
    "source": [
     "1. [Overview](#overview)\n",
     "1. [Includes](#includes)\n",
+    "1. [System templates](#templates)\n",
+    "  1. [Firefly RK3399](#templates_firefly)\n",
+    "  1. [Linaro HiKey960](#templates_hikey960)\n",
+    "  1. [Huawei Mate 10 Pro](#templates_mate10pro)\n",
+    "  1. [Raspberry Pi 4](#templates_rpi4)\n",
+    "  1. [Default](#templates_default)\n",
     "1. [Systems](#systems)\n",
-    "  1. [Firefly RK3399](#systems_firefly)\n",
-    "  1. [Linaro HiKey960](#systems_hikey960)\n",
-    "  1. [Huawei Mate 10 Pro](#systems_mate10pro)\n",
-    "  1. [Raspberry Pi 4](#systems_rpi4)"
+    "1. [Implementations](#implementations)\n",
+    "1. [Get the experimental data](#get)\n",
+    "  1. [Image Classification - Closed](#get_image_classification_closed)\n",
+    "  1. [Image Classification - Open](#get_image_classification_open)\n",
+    "1. [Check the experimental data](#check)"
    ]
   },
   {
@@ -218,15 +225,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"systems\"></a>\n",
-    "## Systems"
+    "<a id=\"templates\"></a>\n",
+    "## System templates"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"systems_firefly\"></a>\n",
+    "<a id=\"templates_firefly\"></a>\n",
     "### [Firefly-RK3399](http://en.t-firefly.com/product/rk3399/)"
    ]
   },
@@ -279,77 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TFLite v1.15"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "closed_firefly_tflite = deepcopy(firefly)\n",
-    "closed_firefly_tflite.update({\n",
-    "    \"division\"  : \"closed\",\n",
-    "    \"framework\" : \"TFLite v1.15.0-rc2\"\n",
-    "})\n",
-    "closed_firefly_tflite"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "open_firefly_tflite = deepcopy(firefly)\n",
-    "open_firefly_tflite.update({\n",
-    "    \"division\"  : \"open\",\n",
-    "    \"framework\" : \"TFLite v1.15.0-rc2\"\n",
-    "})\n",
-    "open_firefly_tflite"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### ArmNN v19.08"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "closed_firefly_armnn = deepcopy(firefly)\n",
-    "closed_firefly_armnn.update({\n",
-    "    \"division\"  : \"closed\",\n",
-    "    \"framework\" : \"ArmNN v19.08\"\n",
-    "})\n",
-    "closed_firefly_armnn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "open_firefly_armnn = deepcopy(firefly)\n",
-    "open_firefly_armnn.update({\n",
-    "    \"division\"  : \"open\",\n",
-    "    \"framework\" : \"ArmNN v19.08\"\n",
-    "})\n",
-    "open_firefly_armnn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"systems_hikey960\"></a>\n",
+    "<a id=\"templates_hikey960\"></a>\n",
     "### [Linaro HiKey960](https://www.96boards.org/product/hikey960/)"
    ]
   },
@@ -402,77 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TFLite v1.15"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "closed_hikey960_tflite = deepcopy(hikey960)\n",
-    "closed_hikey960_tflite.update({\n",
-    "    \"division\"  : \"closed\",\n",
-    "    \"framework\" : \"TFLite v1.15.0-rc2\"\n",
-    "})\n",
-    "closed_hikey960_tflite"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "open_hikey960_tflite = deepcopy(hikey960)\n",
-    "open_hikey960_tflite.update({\n",
-    "    \"division\"  : \"open\",\n",
-    "    \"framework\" : \"TFLite v1.15.0-rc2\"\n",
-    "})\n",
-    "open_hikey960_tflite"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### ArmNN v19.08"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "closed_hikey960_armnn = deepcopy(hikey960)\n",
-    "closed_hikey960_armnn.update({\n",
-    "    \"division\"  : \"closed\",\n",
-    "    \"framework\" : \"ArmNN v19.08\"\n",
-    "})\n",
-    "closed_hikey960_armnn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "open_hikey960_armnn = deepcopy(hikey960)\n",
-    "open_hikey960_armnn.update({\n",
-    "    \"division\"  : \"open\",\n",
-    "    \"framework\" : \"ArmNN v19.08\"\n",
-    "})\n",
-    "open_hikey960_armnn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"systems_mate10pro\"></a>\n",
+    "<a id=\"templates_mate10pro\"></a>\n",
     "### Huawei Mate 10 Pro"
    ]
   },
@@ -525,77 +392,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TFLite v1.13"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "closed_mate10pro_tflite = deepcopy(mate10pro)\n",
-    "closed_mate10pro_tflite.update({\n",
-    "    \"division\"  : \"closed\",\n",
-    "    \"framework\" : \"TFLite v1.13.1\"\n",
-    "})\n",
-    "closed_mate10pro_tflite"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "open_mate10pro_tflite = deepcopy(mate10pro)\n",
-    "open_mate10pro_tflite.update({\n",
-    "    \"division\"  : \"open\",\n",
-    "    \"framework\" : \"TFLite v1.13.1\"\n",
-    "})\n",
-    "open_mate10pro_tflite"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### ArmNN v19.08"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "closed_mate10pro_armnn = deepcopy(mate10pro)\n",
-    "closed_mate10pro_armnn.update({\n",
-    "    \"division\"  : \"closed\",\n",
-    "    \"framework\" : \"ArmNN v19.08\"\n",
-    "})\n",
-    "closed_mate10pro_armnn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "open_mate10pro_armnn = deepcopy(mate10pro)\n",
-    "open_mate10pro_armnn.update({\n",
-    "    \"division\"  : \"open\",\n",
-    "    \"framework\" : \"ArmNN v19.08\"\n",
-    "})\n",
-    "open_mate10pro_armnn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Raspberry Pi 4"
+    "<a id=\"templates_rpi4\"></a>\n",
+    "### Raspberry Pi 4"
    ]
   },
   {
@@ -647,7 +445,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TFLite v1.15"
+    "<a id=\"templates_default\"></a>\n",
+    "### Default"
    ]
   },
   {
@@ -656,111 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "closed_rpi4_tflite = deepcopy(rpi4)\n",
-    "closed_rpi4_tflite.update({\n",
-    "    \"division\"  : \"closed\",\n",
-    "    \"framework\" : \"TFLite v1.15.0-rc2\"\n",
-    "})\n",
-    "closed_rpi4_tflite"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "open_rpi4_tflite = deepcopy(rpi4)\n",
-    "open_rpi4_tflite.update({\n",
-    "    \"division\"  : \"open\",\n",
-    "    \"framework\" : \"TFLite v1.15.0-rc2\"\n",
-    "})\n",
-    "open_rpi4_tflite"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### ArmNN v19.08"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "closed_rpi4_armnn = deepcopy(rpi4)\n",
-    "closed_rpi4_armnn.update({\n",
-    "    \"division\"  : \"closed\",\n",
-    "    \"framework\" : \"ArmNN v19.08\"\n",
-    "})\n",
-    "closed_rpi4_armnn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "open_rpi4_armnn = deepcopy(rpi4)\n",
-    "open_rpi4_armnn.update({\n",
-    "    \"division\"  : \"open\",\n",
-    "    \"framework\" : \"ArmNN v19.08\"\n",
-    "})\n",
-    "open_rpi4_armnn"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### All"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "division_systems = {\n",
-    "    # Closed.\n",
-    "    'closed-firefly-tflite-v1.15'   : closed_firefly_tflite,\n",
-    "    'closed-firefly-armnn-v19.08'   : closed_firefly_armnn,\n",
-    "    'closed-hikey960-tflite-v1.15'  : closed_hikey960_tflite,\n",
-    "    'closed-hikey960-armnn-v19.08'  : closed_hikey960_armnn,\n",
-    "    'closed-mate10pro-tflite-v1.13' : closed_mate10pro_tflite,\n",
-    "    'closed-mate10pro-armnn-v19.08' : closed_mate10pro_armnn,\n",
-    "    'closed-rpi4-tflite-v1.15'      : closed_rpi4_tflite,\n",
-    "    'closed-rpi4-armnn-v19.08'      : closed_rpi4_armnn,    \n",
-    "    # Open.\n",
-    "    'open-firefly-tflite-v1.15'     : open_firefly_tflite,\n",
-    "    'open-firefly-armnn-v19.08'     : open_firefly_armnn,\n",
-    "    'open-hikey960-tflite-v1.15'    : open_hikey960_tflite,\n",
-    "    'open-hikey960-armnn-v19.08'    : open_hikey960_armnn,\n",
-    "    'open-mate10pro-tflite-v1.13'   : open_mate10pro_tflite,\n",
-    "    'open-mate10pro-armnn-v19.08'   : open_mate10pro_armnn,\n",
-    "    'open-rpi4-tflite-v1.15'        : open_rpi4_tflite,\n",
-    "    'open-rpi4-armnn-v19.08'        : open_rpi4_armnn,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Default `system_desc_id.json` (to catch uninitialized descriptions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Default `system_desc_id.json` (to catch uninitialized descriptions)\n",
     "default_system_json = {\n",
     "    \"division\": \"reqired\",\n",
     "    \"submitter\": \"required\",\n",
@@ -804,6 +499,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"systems\"></a>\n",
+    "## Systems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate division_systems dictionary.\n",
+    "division_systems = {}\n",
+    "\n",
+    "platform_templates = {\n",
+    "    'firefly'   : firefly,\n",
+    "    'hikey960'  : hikey960,\n",
+    "    'mate10pro' : mate10pro,\n",
+    "    'rpi4' : rpi4,\n",
+    "}\n",
+    "\n",
+    "divisions = [ 'open', 'closed' ]\n",
+    "platforms = [ 'firefly', 'hikey960', 'mate10pro', 'rpi4' ]\n",
+    "for division in divisions:\n",
+    "    for platform in platforms:\n",
+    "        if platform == 'mate10pro':\n",
+    "            libraries = [ 'tflite-v1.13', 'armnn-v19.08' ]\n",
+    "        else:\n",
+    "            libraries = [ 'tflite-v1.15', 'armnn-v19.08' ]\n",
+    "        for library in libraries:\n",
+    "            if library == 'armnn-v19.08':\n",
+    "                if platform == 'rpi4':\n",
+    "                    backends = [ 'neon' ]\n",
+    "                else:\n",
+    "                    backends = [ 'neon', 'opencl' ]\n",
+    "                library_backends = [ library+'-'+backend for backend in backends ]\n",
+    "            else:\n",
+    "                library_backends = [ library ]\n",
+    "            for library_backend in library_backends:\n",
+    "                division_system = division+'-'+platform+'-'+library_backend\n",
+    "                frameworks = {\n",
+    "                    'armnn-v19.08-opencl' : 'ArmNN v19.08 (OpenCL)',\n",
+    "                    'armnn-v19.08-neon' : 'ArmNN v19.08 (Neon)',\n",
+    "                    'tflite-v1.13' : 'TFLite v1.13.1',\n",
+    "                    'tflite-v1.15' : 'TFLite v1.15.0-rc2',\n",
+    "                }\n",
+    "                template = deepcopy(platform_templates[platform])\n",
+    "                template.update({\n",
+    "                    'division'  : division,\n",
+    "                    'framework' : frameworks[library_backend]\n",
+    "                })\n",
+    "                if not library_backend.endswith('opencl'):\n",
+    "                    template.update({\n",
+    "                        'accelerator_frequency' : '-',\n",
+    "                        'accelerator_memory_capacity' : '-',\n",
+    "                        'accelerator_model_name' : '-',\n",
+    "                        'accelerators_per_node' : '0',\n",
+    "                    })\n",
+    "                division_systems[division_system] = template\n",
+    "                print(\"=\" * 100)\n",
+    "                print(division_system)\n",
+    "                print(\"=\" * 100)\n",
+    "                pprint(template)\n",
+    "                print(\"-\" * 100)\n",
+    "                print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"implementations\"></a>\n",
     "## Implementations"
    ]
@@ -817,6 +582,16 @@
     "# Generate implementation_benchmarks dictionary.\n",
     "implementation_benchmarks = {}\n",
     "\n",
+    "# Default `system_desc_id_imp.json` (to catch uninitialized descriptions)\n",
+    "default_implementation_benchmark_json = {\n",
+    "    \"input_data_types\": \"required\",\n",
+    "    \"retraining\": \"required\",\n",
+    "    \"starting_weights_filename\": \"required\",\n",
+    "    \"weight_data_types\": \"required\",\n",
+    "    \"weight_transformations\": \"required\"\n",
+    "}\n",
+    "\n",
+    "# For each implementation.\n",
     "for implementation in [ 'image-classification-tflite', 'image-classification-armnn-tflite' ]:\n",
     "    # Add MobileNet.\n",
     "    implementation_mobilenet = implementation+'-'+'mobilenet'\n",
@@ -996,28 +771,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Default `system_desc_id_imp.json` (to catch uninitialized descriptions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "default_implementation_benchmark_json = {\n",
-    "    \"input_data_types\": \"required\",\n",
-    "    \"retraining\": \"required\",\n",
-    "    \"starting_weights_filename\": \"required\",\n",
-    "    \"weight_data_types\": \"required\",\n",
-    "    \"weight_transformations\": \"required\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"get\"></a>\n",
     "## Get the experimental data"
    ]
@@ -1033,6 +786,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"get_image_classification_closed\"></a>\n",
     "### Image Classification - Closed (MobileNet, ResNet)"
    ]
   },
@@ -1147,6 +901,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"get_image_classification_open\"></a>\n",
     "### Image Classification - Open (MobileNets-v1,v2)"
    ]
   },
@@ -1246,7 +1001,7 @@
     "    'mlperf.closed.image-classification.hikey960.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/25\n",
     "    # rpi4\n",
     "    'mlperf.closed.image-classification.rpi4.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/26/\n",
-    "    'mlperf.closed.image-classification.rpi4.armnn-v19.08.neon',\n",
+    "    'mlperf.closed.image-classification.rpi4.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/30\n",
     "    # mate10pro\n",
     "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon',\n",
     "    # mate10pro - for testing the checker\n",
@@ -1333,6 +1088,7 @@
     "\n",
     "        tags = r['dict']['tags']\n",
     "        #print(tags)\n",
+    "        backend = ''\n",
     "        if 'accuracy' in tags:\n",
     "            if 'neon' in tags or 'opencl' in tags:\n",
     "                # Expected format: [ \"mlperf\", \"open\", \"image-classification\", \"firefly\", \"armnn-v19.08\", \"neon\", \"mobilenet-v1-0.5-128\", \"singlestream\", \"accuracy\", \"using-opencv\" ]\n",
@@ -1351,8 +1107,10 @@
     "            raise \"Expected 'accuracy' or 'performance' in tags!\"\n",
     "            \n",
     "        organization = submitter\n",
-    "        system = platform+'-'+library\n",
-    "        division_system = division+'-'+system\n",
+    "        if backend != '':\n",
+    "            system = platform+'-'+library+'-'+backend\n",
+    "        else:\n",
+    "            system = platform+'-'+library\n",
     "        if library.startswith('tflite'):\n",
     "            implementation = task+'-tflite'\n",
     "        elif library.startswith('armnn'):\n",
@@ -1581,8 +1339,8 @@
     "    \n",
     "    return dfs\n",
     "\n",
-    "# repo_uoa = 'mlperf.closed.image-classification.rpi4.tflite-v1.15'\n",
-    "# dfs = get_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
+    "repo_uoa = 'mlperf.closed.image-classification.rpi4.armnn-v19.08.neon'\n",
+    "dfs = get_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
    ]
   }
  ],
