Fix bug prior to open submissions.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -870,6 +870,9 @@
     "```\n",
     "$ wget https://www.dropbox.com/s/t2o2elqdyitqlpi/mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon.zip\n",
     "$ ck add repo --zip=mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon.zip\n",
+    "\n",
+    "$ wget https://www.dropbox.com/s/bi2owxxpcfm6n2s/mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl.zip\n",
+    "$ ck add repo --zip=mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl.zip\n",
     "```"
    ]
   },
@@ -877,7 +880,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO:** accuracy experiment with TFLite v1.15 for ResNet aborted (estimated 17 hours); experiments with ArmNN with OpenCL are in progress."
+    "**TODO:** accuracy experiment with TFLite v1.15 for ResNet aborted (estimated 17 hours)."
    ]
   },
   {
@@ -1004,6 +1007,7 @@
     "    'mlperf.closed.image-classification.rpi4.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/30\n",
     "    # mate10pro\n",
     "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon',\n",
+    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl',\n",
     "    # mate10pro - for testing the checker\n",
     "    'mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.BAD_LOADGEN', \n",
     "]\n",
@@ -1063,7 +1067,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_experimental_results(repo_uoa, module_uoa='experiment', tags='mlperf', submitter='dividiti', path=None):\n",
+    "def check_experimental_results(repo_uoa, module_uoa='experiment', tags='mlperf', submitter='dividiti', path=None):\n",
     "    if not path:\n",
     "        path_list = !ck find repo:$repo_uoa\n",
     "        path = path_list[0]\n",
@@ -1107,10 +1111,13 @@
     "            raise \"Expected 'accuracy' or 'performance' in tags!\"\n",
     "            \n",
     "        organization = submitter\n",
+    "\n",
     "        if backend != '':\n",
     "            system = platform+'-'+library+'-'+backend\n",
     "        else:\n",
     "            system = platform+'-'+library\n",
+    "        division_system = division+'-'+system\n",
+    "\n",
     "        if library.startswith('tflite'):\n",
     "            implementation = task+'-tflite'\n",
     "        elif library.startswith('armnn'):\n",
@@ -1169,6 +1176,8 @@
     "        # Create 'README.md'.\n",
     "        implementation_readme_name = 'README.md'\n",
     "        implementation_readme_path = os.path.join(implementation_dir, implementation_readme_name)\n",
+    "#         pprint(implementation)\n",
+    "#         pprint(implementation_readmes)\n",
     "        implementation_readme = implementation_readmes.get(implementation, '')\n",
     "        with open(implementation_readme_path, 'w') as implementation_readme_file:\n",
     "            implementation_readme_file.writelines(implementation_readme)\n",
@@ -1258,7 +1267,7 @@
     "        #                 mlperf_log_trace.json\n",
     "        #             accuracy/\n",
     "        #               mlperf_log_accuracy.json\n",
-    "        #       compliance_checker_log.txt (?)\n",
+    "        #         compliance_checker_log.txt\n",
     "        #\n",
     "        results_dir = os.path.join(organization_dir, 'results')\n",
     "        if not os.path.exists(results_dir): os.mkdir(results_dir)\n",
@@ -1331,16 +1340,25 @@
     "    checker_log = \"\\n\".join(checker_log)\n",
     "    print(checker_log)\n",
     "    checker_log_name = 'compliance_checker_log.txt'\n",
-    "    checker_log_path = os.path.join(organization_dir, checker_log_name)\n",
+    "    checker_log_path = os.path.join(system_dir, checker_log_name)\n",
     "    with open(checker_log_path, 'w') as checker_log_file:\n",
     "        checker_log_file.writelines(checker_log)\n",
     "        print(organization_dir)\n",
     "        print('  |_%s' % checker_log_name)\n",
-    "    \n",
-    "    return dfs\n",
     "\n",
-    "repo_uoa = 'mlperf.closed.image-classification.rpi4.armnn-v19.08.neon'\n",
-    "dfs = get_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
+    "    return\n",
+    "\n",
+    "# To check \"double-landing\" :)\n",
+    "# repos = [\n",
+    "#     'mlperf.closed.image-classification.hikey960.armnn-v19.08.opencl',\n",
+    "#     'mlperf.closed.image-classification.hikey960.armnn-v19.08.neon'\n",
+    "# ]\n",
+    "repos = [\n",
+    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl'\n",
+    "]\n",
+    "for repo_uoa in repos:\n",
+    "    # The path is where mlperf/submissions_inference_0_5 is cloned under.\n",
+    "    check_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
    ]
   }
  ],
