Add PR#37..40 for open results on hikey and firefly (no neon).

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1017,11 +1017,11 @@
     "#\n",
     "repos_image_classification_open = [\n",
     "    # firefly\n",
-    "    'mlperf.open.image-classification.firefly.tflite-v1.15',\n",
-    "    'mlperf.open.image-classification.firefly.armnn-v19.08.opencl',\n",
+    "    'mlperf.open.image-classification.firefly.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/39\n",
+    "    'mlperf.open.image-classification.firefly.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/40\n",
     "    # hikey960\n",
-    "    'mlperf.open.image-classification.hikey960.tflite-v1.15',\n",
-    "    'mlperf.open.image-classification.hikey960.armnn-v19.08.opencl',\n",
+    "    'mlperf.open.image-classification.hikey960.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/37\n",
+    "    'mlperf.open.image-classification.hikey960.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/38\n",
     "    # rpi4\n",
     "    #'mlperf.open.image-classification.rpi4.tflite-v1.15',\n",
     "]\n",
@@ -1354,11 +1354,11 @@
     "#     'mlperf.closed.image-classification.hikey960.armnn-v19.08.neon'\n",
     "# ]\n",
     "repos = [\n",
-    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl'\n",
+    "    'mlperf.open.image-classification.firefly.armnn-v19.08.opencl'\n",
     "]\n",
-    "for repo_uoa in repos:\n",
-    "    # The path is where mlperf/submissions_inference_0_5 is cloned under.\n",
-    "    check_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
+    "# for repo_uoa in repos:\n",
+    "#     # The path is where mlperf/submissions_inference_0_5 is cloned under.\n",
+    "#     check_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
    ]
   }
  ],
